# revedaRelease

./: .directory  .env  .gitignore  .gitmodules  .project  CHANGELOG.txt  FUNDING.yml  LICENSE.txt  Mozilla Public License, version 2.0.html  Point.py  README.md  README_pypi.md  RevEDA.kdev4  Vector.py  __init__.py  app.py  cellview.py  circuitElements.py  config.py  editorWindows.py  labels.md  library.json  library.yaml  libraryWindow.py  loadJSON.py  lowPassFilter.cir  lowPassRC.cir  main.py  net.py  nuitka.sh  pin.py  propertyDialogues.py  pyproject.toml  pythonConsole.py  qrc_resources.py  requirements.txt  resources.py  reveda.cmd  reveda.conf  reveda.py  (+12 more)
.github/workflows/: codeql.yml  hatch.yml  innoSetupBuild.yml  main.yml  nuitka.yml  nuitka_macos.yml  reveda-app.yml
.kdev4/: revedaRelease.kdev4
analogLib/cap/: symbol.json
analogLib/nmos/: symbol.json
analogLib/res/: symbol.json
anotherDesign/first/: schematic.json  symbol.json
anotherDesign/second/: schematic.json  symbol.json
anotherDesign/third/: symbol.json
api/: ui.py
backend/: __init__.py  hdlBackEnd.py  libraryMethods.py  netlisting.py  schBackEnd.py  undoStack.py
common/: Point.py  Vector.py  __init__.py  cellview.py  fonts.py  layers.py  net.py  pens.py  shape.py
defaultPDK/: __init__.py  callbacks.py  layoutLayers.py  pcells.py  process.py  schLayers.py  stipple2.txt  stipple3.txt  stipple5.txt  stipple6.txt  stipple7.txt  symLayers.py
designs/amplifier/: schematic2.json
designs/cascadedFilter/: schematic.json  symbol.json
designs/commonSourceAmp/: schematic.json  symbol.json
designs/highPassFilter/: schematic.json  symbol.json
docs/: Revolution EDA Symbol and Schematic Editors.md  _config.yml  configEditor.md  index.md  installation.md  layoutTutorial.md  revedaMainWindow.md  schematicTutorial.md  symbolTutorial.md
exampleLibraries/analogLib/amp2/: amp2.va
exampleLibraries/analogLib/cap/: symbol.json
exampleLibraries/analogLib/capVa/: cap.va
fileio/: __init__.py  loadJSON.py  symbolEncoder.py
gui/: appWindow.py  editFunctions.py  editorWindows.py  fileDialogues.py  propertyDialogues.py  pythonConsole.py
pdk/: .gitignore  __init__.py  callbacks.py  layoutLayers.py  pcells.py  process.py  schLayers.py  sg13_tech.py  stipple1.txt  stipple4.txt  symLayers.py
pdk/stipples/: C0.txt  C10.txt  C11.txt  C12.txt  C13.txt  C14.txt  C15.txt  C16.txt  C17.txt  C18.txt  C19.txt  C2.txt  C20.txt  C21.txt  C22.txt  C23.txt  C24.txt  C25.txt  C26.txt  C27.txt  C28.txt  C29.txt  C3.txt  C30.txt  C31.txt  C33.txt  C34.txt  C35.txt  C36.txt  C37.txt  C38.txt  C39.txt  C4.txt  C40.txt  C41.txt  C42.txt  C43.txt  C44.txt  C45.txt  C46.txt  (+12 more)
plugins/revedaPlot/: .gitignore  __init__.py  dataDefinitions.py  prefixHandler.py  processAsciFile.py  processData.py  processRawFile.py  revedaPlotMain.py
plugins/xyceInterface/: __init__.py  prefixHandler.py  processAsciFile.py  processRawFile.py  xyceSimulator.py
resources/: qrc_resources.py  resources.py
revedaEditor/: .env  .gitignore  README.md  README_pypi.md  __init__.py  reveda.conf  reveda.py
revedaEditor/api/: ui.py
revedaEditor/backend/: __init__.py  dataDefinitions.py  editFunctions.py  hdlBackEnd.py  importViews.py  libBackEnd.py  libraryMethods.py  libraryModelView.py  pdkPaths.py  schBackEnd.py  startThread.py  undoStack.py
revedaEditor/checks/: schematic.py
revedaEditor/common/: __init__.py  fonts.py  labels.py  labels_orig.py  layers.py  layoutShapes.py  net.py  pens.py  shape.py  shapes.py
revedaEditor/debug/: debug.py
revedaEditor/docs/: index.md
revedaEditor/fileio/: __init__.py  gdsExport.py  importGDS.py  importLayp.py  importXschemSym.py  layoutEncoder.py  loadJSON.py  schematicEncoder.py  symbolEncoder.py
revedaEditor/gui/: __init__.py  configEditor.py  editFunctions.py  editorScene.py  editorScenes.py  editorViews.py  editorWindow.py  editorWindows.py  fileDialogues.py  helpBrowser.py  layoutDialogues.py  layoutEditor.py  layoutScene.py  libraryBrowser.py  lsw.py  propertyDialogues.py  pythonConsole.py  revedaMain.py  revinit.py  schematicEditor.py  schematicScene.py  startThread.py  stippleEditor.py  symbolEditor.py  symbolScene.py  textEditor.py  utilDialogues.py
revedaEditor/netlisters/: vacaskNetlist.py  xyceNetlist.py
revedaEditor/resources/: resources.py
revedaEditor/scenes/: __init__.py  editorScene.py  layoutScene.py  schematicScene.py  symbolScene.py
revedaEditor/test/: __init__.py  cap.va  circuit1.sp  circuit2.sp  diode.va  flickerNoise.va  res.va  test_hdlBackEnd.py  test_importViews.py
revedaEditor/tests/: test_labels_nlp.py
revedaPlot/: processData.py
revedasim/: __init__.py  analysisPanel.py  fileOps.py  outputsPanel.py  simMainWindow.py  variablesPanel.py
tests/: test_net.py  test_netlisting.py  test_schematicScene.py  test_symbol_pins.py
(+30 files in other folders)
