[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revolution-eda"
dynamic = ["version"]
description = 'Revolution EDA is a new generation integrated circuit design environment.'
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE.txt"] }
# keywords = []
authors = [
    { name = "Revolution EDA", email = "48187772+eskiyerli@users.noreply.github.com" },
]
dependencies = [
    "PySide6==6.6.2",
    "quantiphy~=2.19",
    "python-dotenv==1.0.0",
    "gdstk==0.9.50",
]
keywords = ["electronic", "design", "schematic", "layout", ]
classifiers = ["Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]


[project.urls]
Documentation = "https://github.com/unknown/revolution-eda#readme"
Issues = "https://github.com/unknown/revolution-eda/issues"
Source = "https://github.com/unknown/revolution-eda"
Website = "https://reveda.eu"

[project.scripts]
reveda = "reveda:main"

[tool.hatch.build.targets.wheel]
packages = ['revedaEditor', 'pdk']
modules = ['revinit', 'reveda']

[tool.hatch.version]
path = "revedaEditor/gui/revinit.py"

[tool.hatch.build.targets.wheel.force-include]
"./exampleLibraries" = "exampleLibraries"
"./reveda.py" = "reveda.py"
"./reveda.conf" = "reveda.conf"
"./library.json" = "library.json"

[tool.pyright]
venvPath = "/home/eskiyerli/.local/"
venv = ".venv_3p12"
