[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revolution-eda"
dynamic = ["version"]
description = "Revolution EDA is a new generation integrated circuit design environment."
readme = "README.md"
requires-python = ">=3.13.0"
license-files = { paths = ["LICENSE.txt"] }
# keywords = []
authors = [
    { name = "Revolution EDA", email = "48187772+eskiyerli@users.noreply.github.com" },
]
dependencies = [
    "PySide6~=6.7.2",
    "python-dotenv~=1.0.1",
    "quantiphy~=2.20",
    "setuptools~=73.0.1",
    "gdstk~=0.9.53",
    "cachetools~=5.5.0",
    "methodtools~=0.4.7",
]
keywords = ["electronic", "design", "schematic", "layout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
version = ""


[project.urls]
Documentation = "https://github.com/eskiyerli/revolution-eda#readme"
Issues = "https://github.com/eskiyerli/revolution-eda/issues"
Source = "https://github.com/eskiyerli/revolution-eda"
Website = "https://reveda.eu"

[project.scripts]
reveda = "reveda:main"

[tool.hatch.build.targets.wheel]
packages = ['revedaEditor', 'pdk']
modules = ['revinit', 'reveda']

[tool.hatch.version]
path = "revedaEditor/gui/revinit.py"

[tool.hatch.build.targets.wheel.force-include]
"./exampleLibraries" = "exampleLibraries"
"./reveda.py" = "reveda.py"
"./reveda.conf" = "reveda.conf"
"./library.json" = "library.json"

[tool.pyright]
venvPath = "/home/eskiyerli/.local"
venv_3p12 = "reveda_3p12"
venv_3p11 = "reveda_3p11"
